# Audiblytics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ToDo  ax  dev  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  stories
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 20260530_0001_initial_users_and_user_settings.py  20260530_0002_paragraph_cache.py  20260530_0003_user_settings_gemini_api_key.py  20260531_0004_recordings.py  20260531_0005_collection_words.py  20260531_0006_day_completions.py  20260601_0007_days_of_use.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  database.py  database_url.py  deps.py  security.py
apps/api/app/models/: __init__.py  collection_word.py  day_completion.py  days_of_use.py  paragraph_cache.py  recording.py  user.py  user_settings.py
apps/api/app/schemas/: auth.py  collection.py  completions.py  days_of_use.py  paragraph.py  recording.py  settings.py
apps/api/app/services/: gemini_paragraph.py  paragraph_prompt.py  r2_client.py  (+1 more)
apps/api/audiblytics_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: migrate.sh  seed_user.py
apps/api/tests/: conftest.py  test_adrs.py  test_alembic_revisions.py  test_auth_settings.py  test_collection.py  test_completions.py  test_database_url.py  test_days_of_use.py  test_dockerfile.py  test_paragraphs.py  test_production_lifespan.py  test_r2_recordings.py  test_recording_retention.py  test_recordings.py
(+482 files in other folders)
