[project]
name = "audiblytics-api"
version = "0.1.0"
description = "Audiblytics FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy[asyncio]>=2.0.50",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.21.0",
  "alembic>=1.14.0",
  "pydantic-settings>=2.7.0",
  "email-validator>=2.2.0",
  "pyjwt>=2.10.0",
  "bcrypt>=4.2.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
